# Condodata-prueba

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: Dockerfile  auth.py  config.py  database.py  file_validator.py  main.py  middleware.py
api/routers/: health.py  ingestion.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/staging/: schema.yml  stg_bank_transactions.sql
docs/: ARCHITECTURE.md  SECURITY.md  plantilla_cuotas.csv
ingestion/: logger.py  models.py  service.py
ingestion/parsers/: bank_excel.py  bank_pdf.py  cuotas_manual.py  gastos.py
ingestion/sanitizers/: text.py
ingestion/validators/: duplicates.py
scripts/: generate_secrets.py  init_db.sql  postgres.conf
tests/: conftest.py
tests/unit/: test_logger.py  test_security.py
tests/unit/ingestion/: test_parsers.py
